--- a/SMSSERVICE.CLIENT/src/app/pages/report/report/report.component.html
+++ b/SMSSERVICE.CLIENT/src/app/pages/report/report/report.component.html
@@ -56,10 +56,10 @@
                       <th>Number Of Customers</th>
                       <th>Status</th>
 
-                      <th>organizationName/th>
-                      <th>Text Size</th>
+                      <th>organizationName</th>
+                      <th>Send Time</th>
 
-                      <th></th>
+                      <th>UnSent Count</th>
 
                   </tr>
               </ng-template>
@@ -76,7 +76,7 @@
 
                       <td> {{ report.organizationName }} </td>
 
-                      <td> {{ report.sendTime }} </td>
+                      <td> {{ report.createdDate }} </td>
                       <td> {{ report.unSentCount }} </td>
 
 
